# Tonal

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/icons/: tonal.icns
docs/: design.md
installer/: build_mac.sh  build_windows.bat  make_icns.py  tonal.spec
src/tonal/: __init__.py  __main__.py  main.py
src/tonal/core/: __init__.py  alarm_manager.py  library.py  player.py
src/tonal/ui/: __init__.py  alarm_dialog.py  animated_background.py  library_panel.py  main_window.py  player_controls.py  spotify_panel.py  theme.py  track_list.py  youtube_panel.py
tests/: conftest.py  test_imports.py  test_library.py
